@@ -61,7 +61,8 @@ sets the remote username to
 Otherwise, the remote username will be the same as the local username.
 .TP
 \fB\-x\fP
-causes the network session traffic to be encrypted.
+causes the network session traffic to be encrypted.  This applies only
+to the input and output streams, and not the command line.
 .TP
 \fB\-f\fP
 cause nonforwardable Kerberos credentials to be forwarded to the remote
