@@ -1,3 +1,9 @@
+2002-06-27  Jen Selby <jenselby@mit.edu>
+
+	* rsh.M: added warning that encryption does not encrypt the
+	command line
+	*rlogin.M: added warning that username is sent unencrypted
+
 2002-06-25  Ken Raeburn  <raeburn@mit.edu>
 
 	* kcmd.c (kcmd): Don't restrict addresses to IPv4.
